--- a/index.html
+++ b/index.html
@@ -238,143 +238,181 @@
             <div class="row">
                 <div class="text-center">
                   <ul id="confirmed-speakers">
-                    <a href="https://twitter.com/AaronvanW" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/aaronVanWirdum.jpg" width="180" height="180" alt="Aaron van Wirdum"/>
-                              <span class="name">Aaron van Wirdum</span>
-                              <span class="role">Bitcoin Magazine</span>
-                          </li>
-                      </a>
-                    <a href="https://twitter.com/nopara73" target="_blank" style="text-decoration:none !important;">
+                    <a href="https://twitter.com/AaronvanW" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/aaronVanWirdum.jpg" width="180" height="180" alt="Aaron van Wirdum"/>
+                            <span class="name">Aaron van Wirdum</span>
+                            <span class="role">Bitcoin Magazine</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/nopara73" target="_blank" class="no-text-decoration">
                         <li>
                             <img src="img/speakers/adamFiscor.jpg" width="180" height="180" alt="Adam Fiscor"/>
                             <span class="name">Adam Ficsor</span>
                             <span class="role">TumbleBit</span>
                         </li>
                     </a>
-                    <a href="https://twitter.com/waxwing__" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/adamGibson.jpg" width="180" height="180" alt="Adam Gibson "/>
-                              <span class="name">Adam Gibson</span>
-                              <span class="role">github.com/AdamISZ</span>
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/kanzure" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/bryanBishop.jpg" width="180" height="180" alt="Bryan Bishop"/>
-                              <span class="name">Bryan Bishop</span>
-                              <span class="role">LedgerX</span>
-                          </li>
-                      </a>
-                      <a href="https://www.linkedin.com/in/evoskuil" target="_blank" style="text-decoration:none !important;">
+                    <a href="https://twitter.com/waxwing__" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/adamGibson.jpg" width="180" height="180" alt="Adam Gibson "/>
+                            <span class="name">Adam Gibson</span>
+                            <span class="role">github.com/AdamISZ</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/alexeiZamyatin" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/alexeiZamyatin.jpg" width="180" height="180" alt="Alexei Zamyatin"/>
+                            <span class="name">Alexei Zamyatin</span>
+                            <span class="role">PhD IC3RE</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/kanzure" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/bryanBishop.jpg" width="180" height="180" alt="Bryan Bishop"/>
+                            <span class="name">Bryan Bishop</span>
+                            <span class="role">LedgerX</span>
+                        </li>
+                    </a>
+                    <a href="https://www.linkedin.com/in/evoskuil" target="_blank" class="no-text-decoration">
                         <li>
                             <img src="img/speakers/ericVoskuil.jpg" width="180" height="180" alt="Eric Voskuil "/>
                             <span class="name">Eric Voskuil</span>
                             <span class="role">Bitware</span>
                         </li>
-                      </a>
-                      <a href="https://twitter.com/giacomozucco" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/giacomoZucco.jpg" width="180" height="180" alt="Giacomo Zucco"/>
-                              <span class="name">Giacomo Zucco</span>
-                              <span class="role">BHB Network</span>
-
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/lopp" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/jamesonLopp.jpg" width="180" height="180" alt="Jameson Lopp "/>
-                              <span class="name">Jameson Lopp</span>
-                              <span class="role">keys.casa</span>
-
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/timoncc" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/jeorgeTimon.jpg" width="180" height="180" alt="Jorge Timón"/>
-                              <span class="name">Jorge Timón</span>
-                              <span class="role">blockstream.com/</span>
-
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/n1ckler" target="_blank" style="text-decoration:none !important;">
+                    </a>
+                    <a href="https://www.linkedin.com/in/fabrice-drouin-95ab8012" target="_blank" style="text-decoration:none !important;">
+                        <li>
+                            <img src="img/speakers/fabriceDrouin.jpg" width="180" height="180" alt="Fabrice Drouin "/> 
+                            <span class="name">Fabrice Drouin</span> 
+                            <span class="role">Acinq</span>         
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/giacomozucco" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/giacomoZucco.jpg" width="180" height="180" alt="Giacomo Zucco"/>
+                            <span class="name">Giacomo Zucco</span>
+                            <span class="role">BHB Network</span>
+                        </li>
+                    </a>
+                    <a href="https://www.andrew.cmu.edu/user/gfanti/#home" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/giuliaFanti.jpg" width="180" height="180" alt="Giulia Fanti"/>
+                            <span class="name">Giulia Fanti</span>
+                            <span class="role"></span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/lopp" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/jamesonLopp.jpg" width="180" height="180" alt="Jameson Lopp "/>
+                            <span class="name">Jameson Lopp</span>
+                            <span class="role">keys.casa</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/timoncc" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/jeorgeTimon.jpg" width="180" height="180" alt="Jorge Timón"/>
+                            <span class="name">Jorge Timón</span>
+                            <span class="role">blockstream.com/</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/n1ckler" target="_blank" class="no-text-decoration">
                         <li>
                             <img src="img/speakers/jonasNick.jpg" width="180" height="180" alt="Jonas Nick"/>
                             <span class="name">Jonas Nick</span>
                             <span class="role">blockstram.com</span>
                         </li>
                     </a>
-                      <a href="https://twitter.com/_jonasschnelli_" target="_blank" style="text-decoration:none !important;">
+                    <a href="https://twitter.com/_jonasschnelli_" target="_blank" class="no-text-decoration">
                         <li>
                             <img src="img/speakers/jonasSchnelli.jpg" width="180" height="180" alt="Jonas Schnelli"/>
                             <span class="name">Jonas Schnelli</span>
                             <span class="role">digitalbitbox.com</span>
                         </li>
                     </a>
-                      <a href="https://twitter.com/KLoaec" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/kevinLoaec.jpg" width="180" height="180" alt="Kevin Loaec "/>
-                              <span class="name">Kevin Loaec</span>
-                              <span class="role">Chainsmiths</span>
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/musalbas" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/mustafaAlBassam.jpg" width="180" height="180" alt="Mustafa Al-Bassam"/>
-                              <span class="name">Mustafa Al-Bassam</span>
-                              <span class="role">PhD Student, UCL</span>
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/BTChip" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/nicolasBacca.jpg" width="180" height="180" alt="Nicolas Bacca"/>
-                              <span class="name">Nicolas Bacca</span>
-                              <span class="role">Ledger</span>
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/NicolasDorier" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/nicolasDorier.jpg" width="180" height="180" alt="Nicolas Dorier"/>
-                              <span class="name">Nicolas Dorier</span>
-                              <span class="role">Metaco SA</span>
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/truthcoin" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/paulSztorc.jpg" width="180" height="180" alt="Paul Sztorc"/>
-                              <span class="name">Paul Sztorc</span>
-                              <span class="role">Drivechain</span>
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/patestevao" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/patriciaEstevao.jpg" width="180" height="180" alt="Patrícia Estevão "/>
-                              <span class="name">Patrícia Estevão</span>
-                              <span class="role">UX Designer, Consultant</span>
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/petertoddbtc" target="_blank" style="text-decoration:none !important;">
+                    <a href="https://twitter.com/KLoaec" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/kevinLoaec.jpg" width="180" height="180" alt="Kevin Loaec "/>
+                            <span class="name">Kevin Loaec</span>
+                            <span class="role">Chainsmiths</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/musalbas" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/mustafaAlBassam.jpg" width="180" height="180" alt="Mustafa Al-Bassam"/>
+                            <span class="name">Mustafa Al-Bassam</span>
+                            <span class="role">PhD Student, UCL</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/BTChip" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/nicolasBacca.jpg" width="180" height="180" alt="Nicolas Bacca"/>
+                            <span class="name">Nicolas Bacca</span>
+                            <span class="role">Ledger</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/NicolasDorier" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/nicolasDorier.jpg" width="180" height="180" alt="Nicolas Dorier"/>
+                            <span class="name">Nicolas Dorier</span>
+                            <span class="role">Metaco SA</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/truthcoin" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/paulSztorc.jpg" width="180" height="180" alt="Paul Sztorc"/>
+                            <span class="name">Paul Sztorc</span>
+                            <span class="role">Drivechain</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/patestevao" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/patriciaEstevao.jpg" width="180" height="180" alt="Patrícia Estevão "/>
+                            <span class="name">Patrícia Estevão</span>
+                            <span class="role">UX Designer, Consultant</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/petertoddbtc" target="_blank" class="no-text-decoration">
                         <li>
                             <img src="img/speakers/peterTodd.jpg" width="180" height="180" alt="Peter Todd "/> 
                             <span class="name">Peter Todd</span> 
                             <span class="role">Applied Cryptographer</span> 
                         </li>
                     </a>
-                      <a href="https://twitter.com/rperezmarco" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/ricardoPerezMarco.jpg" width="180" height="180" alt="Ricardo Pérez Marco "/>
-                              <span class="name">Ricardo Pérez Marco</span>
-                              <span class="role">CNRS</span>
-                          </li>
-                      </a>
-                      <a href="https://twitter.com/ziggamon" target="_blank" style="text-decoration:none !important;">
-                          <li>
-                              <img src="img/speakers/sergejKotliar.jpg" width="180" height="180" alt="Sergej Kotliar "/>
-                              <span class="name">Sergej Kotliar</span>
-                              <span class="role">Bitrefill</span>
-
-                          </li>
-                      </a>
+                    <a href="https://twitter.com/rperezmarco" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/ricardoPerezMarco.jpg" width="180" height="180" alt="Ricardo Pérez Marco "/>
+                            <span class="name">Ricardo Pérez Marco</span>
+                            <span class="role">CNRS</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/ziggamon" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/sergejKotliar.jpg" width="180" height="180" alt="Sergej Kotliar "/>
+                            <span class="name">Sergej Kotliar</span>
+                            <span class="role">Bitrefill</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/SDLerner" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/sergioDemianLerner.jpg" width="180" height="180" alt="Sergio Demian Lerner"/>
+                            <span class="name">Sergio Demian Lerner</span>
+                            <span class="role">rsk.co</span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/thomaskerin" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/thomasKerin.jpg" width="180" height="180" alt="Thomas Kerin"/>
+                            <span class="name">Thomas Kerin</span>
+                            <span class="role"></span>
+                        </li>
+                    </a>
+                    <a href="https://twitter.com/XavierLava" target="_blank" class="no-text-decoration">
+                        <li>
+                            <img src="img/speakers/xavierLavassiere.jpg" width="180" height="180" alt="Xavier Lavassière"/>
+                            <span class="name">Xavier Lavassière</span>
+                            <span class="role">ECAN</span>
+                        </li>
+                    </a>
                   </ul>
                 </div>
             </div>
