--- a/index.html
+++ b/index.html
@@ -508,6 +508,24 @@
                         <div class="col-md-12">
                             <div class="row">
                                 <div class="col-12">
+                                    <h3 class="section-heading text-black">Platinum</h3>
+                                    <hr class="invert">
+                                </div>
+                            </div>
+                            <dir class="row padding-left-zero">
+                                <div class="col-md-6">
+                                    <a href="http://bhb.network/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/platinum/bhbNetwork.png" alt="BHBNetwork">
+                                    </a>
+                                </div>
+                                <div class="col-md-6">
+                                    <a href="https://www.ledgerwallet.com/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/platinum/ledger.png" alt="Ledger">
+                                    </a>
+                                </div>
+                            </dir>
+                            <div class="row">
+                                <div class="col-12">
                                     <h3 class="section-heading text-black">Gold</h3>
                                     <hr class="invert">
                                 </div>
@@ -568,7 +586,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-4 col-md-2 offset-md-3">
+                                <div class="col-4 col-md-2 offset-md-2">
                                     <a class="sponsor" href="https://comproeuro.it/" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/coal/comproEuro.png" alt="Compro Euro">
                                     </a>
@@ -583,6 +601,11 @@
                                         <img class="img-fluid" src="img/sponsors/coal/exchangeUnion.png" alt="Exchange Union">
                                     </a>
                                 </div>
+                                <div class="col-4 col-md-2">
+                                    <a class="sponsor" href="https://blockstream.com" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/coal/blockstream.png" alt="Blockstream">
+                                    </a>
+                               </div>
                             </div>
                         </div>
                     </div>
