added sponsors + price modification

--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
                     <h2 class="section-heading text-black">Tickets</h2>
                     <hr class="invert">
                     <p class="text-black">
-                        <b>€200</b> Individual or startup
+                        <b><strike>€200</strike> €300</b> Individual or startup
                         <br><br>
-                        <b>€400</b> Regular business / corporate / Late birds
+                        <b><strike>€400</strike> €500</b> Regular business / corporate / Late birds
                         
                     </p>
                     <!-- Don't hurt me, it's a caching issue, want to fix as quickly-->
@@ -572,7 +572,12 @@
                             </div>
                             <br>
                             <div class="row">
-                                <div class="col-4 col-md-2 offset-md-5">
+                                <div class="col-4 col-md-2 offset-md-4">
+                                    <a class="sponsor" href="https://shiftcrypto.ch/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/silver/bitBox.png" alt="BitBox">
+                                    </a>
+                                </div>
+                                <div class="col-4 col-md-2">
                                     <a class="sponsor" href="docs/Bobsponsorship.pdf" type="application/pdf" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/besponsor.png" alt="Sponsorship Proposal">
                                     </a>
