--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                         <div class="col-md-12">
                             <div class="row">
                                 <div class="col-12">
-                                    <h3 class="section-heading text-black">Platinum</h3>
+                                    <h2 class="section-heading text-black">Platinum</h2>
                                     <hr class="invert">
                                 </div>
                             </div>
@@ -526,20 +526,25 @@
                             </dir>
                             <div class="row">
                                 <div class="col-12">
-                                    <h3 class="section-heading text-black">Gold</h3>
+                                    <h2 class="section-heading text-black">Gold</h2>
                                     <hr class="invert">
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-6 offset-md-3">
+                                <div class="col-md-5 offset-md-1">
                                     <a class="sponsor" href="https://www.bitonic.nl/" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/gold/bitonic.png" alt="Bitonic">
+                                    </a>
+                                </div>
+                                <div class="col-md-5">
+                                    <a class="sponsor" href="https://breaking-bitcoin.com/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/gold/bb.png" alt="Breaking Bitcoin">
                                     </a>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <h3 class="section-heading text-black">Silver</h3>
+                                    <h2 class="section-heading text-black">Silver</h2>
                                     <hr class="invert">
                                 </div>
                             </div>
@@ -586,7 +591,7 @@
                             <br><br>
                             <div class="row">
                                 <div class="col-12">
-                                    <h3 class="section-heading text-black">Coal</h3>
+                                    <h2 class="section-heading text-black">Coal</h2>
                                     <hr class="invert">
                                 </div>
                             </div>
