rounding some element and sizing fixes

--- a/index.html
+++ b/index.html
@@ -515,12 +515,12 @@
                             <dir class="row padding-left-zero">
                                 <div class="col-md-6">
                                     <a href="http://bhb.network/" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/platinum/bhbNetwork.png" alt="BHBNetwork">
+                                        <img class="img-fluid  bhb-network" src="img/sponsors/platinum/bhbNetwork.png" alt="BHBNetwork">
                                     </a>
                                 </div>
                                 <div class="col-md-6">
                                     <a href="https://www.ledgerwallet.com/" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/platinum/ledger.png" alt="Ledger">
+                                        <img class="img-fluid " src="img/sponsors/platinum/ledger.png" alt="Ledger">
                                     </a>
                                 </div>
                             </dir>
@@ -546,27 +546,27 @@
                             <div class="row">
                                 <div class="col-4 col-md-2 offset-md-1">
                                     <a class="sponsor" href="https://www.f2pool.com/" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/silver/f2pool.png" alt="F2pool">
+                                        <img class="img-fluid rounded-circle" src="img/sponsors/silver/f2pool.png" alt="F2pool">
                                     </a>
                                 </div>
                                 <div class="col-4 col-md-2">
                                     <a class="sponsor" href="https://www.hodl.capital/" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/silver/HODL.png" alt="HODL.capital">
+                                        <img class="img-fluid " src="img/sponsors/silver/HODL.png" alt="HODL.capital">
                                     </a>
                                 </div>
                                 <div class="col-4 col-md-2">
                                     <a href="http://chaincode.com/" class="sponsor" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/silver/chaincode.png" alt="Chaincode">
+                                        <img class="img-fluid rounded-circle" src="img/sponsors/silver/chaincode.png" alt="Chaincode">
                                     </a>
                                 </div>
                                 <div class="col-4 col-md-2">
                                     <a class="sponsor" href="#" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/silver/satoshiDesign.png" alt="satoshiDesign">
+                                        <img class="img-fluid rounded-circle" src="img/sponsors/silver/satoshiDesign.png" alt="satoshiDesign">
                                     </a>
                                 </div>
                                 <div class="col-4 col-md-2">
                                     <a class="sponsor" href="https://www.bcademy.it/" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/silver/Bcademy.png" alt="BCademy">
+                                        <img class="img-fluid " src="img/sponsors/silver/Bcademy.png" alt="BCademy">
                                     </a>
                                 </div>
                             </div>
@@ -574,12 +574,12 @@
                             <div class="row">
                                 <div class="col-4 col-md-2 offset-md-4">
                                     <a class="sponsor" href="https://shiftcrypto.ch/" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/silver/bitBox.png" alt="BitBox">
+                                        <img class="img-fluid rounded-circle" src="img/sponsors/silver/bitBox.png" alt="BitBox">
                                     </a>
                                 </div>
                                 <div class="col-4 col-md-2">
                                     <a class="sponsor" href="docs/Bobsponsorship.pdf" type="application/pdf" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/besponsor.png" alt="Sponsorship Proposal">
+                                        <img class="img-fluid rounded-circle" src="img/sponsors/besponsor.png" alt="Sponsorship Proposal">
                                     </a>
                                 </div>
                             </div>
