some sizing modifications

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                                 </div>
                                 <div class="col-md-5">
                                     <a class="sponsor" href="https://breaking-bitcoin.com/" target="_blank">
-                                        <img class="img-fluid" src="img/sponsors/gold/bb.png" alt="Breaking Bitcoin">
+                                        <img class="img-fluid breaking-bitcoin" src="img/sponsors/gold/bb.png" alt="Breaking Bitcoin">
                                     </a>
                                 </div>
                             </div>
@@ -549,40 +549,37 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-4 col-md-2 offset-md-1">
+                                <div class="col-4 col-sm-4 col-md-2 offset-md-1">
                                     <a class="sponsor" href="https://www.f2pool.com/" target="_blank">
                                         <img class="img-fluid rounded-circle" src="img/sponsors/silver/f2pool.png" alt="F2pool">
                                     </a>
                                 </div>
-                                <div class="col-4 col-md-2">
+                                <div class="col-4 col-sm-4 col-md-2">
                                     <a class="sponsor" href="https://www.hodl.capital/" target="_blank">
                                         <img class="img-fluid " src="img/sponsors/silver/HODL.png" alt="HODL.capital">
                                     </a>
                                 </div>
-                                <div class="col-4 col-md-2">
+                                <div class="col-4 col-sm-4 col-md-2">
                                     <a href="http://chaincode.com/" class="sponsor" target="_blank">
                                         <img class="img-fluid rounded-circle" src="img/sponsors/silver/chaincode.png" alt="Chaincode">
                                     </a>
                                 </div>
-                                <div class="col-4 col-md-2">
+                                <div class="col-4 col-sm-4 col-md-2">
                                     <a class="sponsor" href="#" target="_blank">
                                         <img class="img-fluid rounded-circle" src="img/sponsors/silver/satoshiDesign.png" alt="satoshiDesign">
                                     </a>
                                 </div>
-                                <div class="col-4 col-md-2">
+                                <div class="col-4 col-sm-4 col-md-2">
                                     <a class="sponsor" href="https://www.bcademy.it/" target="_blank">
                                         <img class="img-fluid " src="img/sponsors/silver/Bcademy.png" alt="BCademy">
                                     </a>
                                 </div>
-                            </div>
-                            <br>
-                            <div class="row">
-                                <div class="col-4 col-md-2 offset-md-4">
+                                <div class="col-4 col-sm-4 col-md-2 offset-md-4">
                                     <a class="sponsor" href="https://shiftcrypto.ch/" target="_blank">
                                         <img class="img-fluid rounded-circle" src="img/sponsors/silver/bitBox.png" alt="BitBox">
                                     </a>
                                 </div>
-                                <div class="col-4 col-md-2">
+                                <div class="col-4 col-sm-4 col-md-2 ">
                                     <a class="sponsor" href="docs/Bobsponsorship.pdf" type="application/pdf" target="_blank">
                                         <img class="img-fluid rounded-circle" src="img/sponsors/besponsor.png" alt="Sponsorship Proposal">
                                     </a>
