added cryptotrust sponsor

--- a/index.html
+++ b/index.html
@@ -531,14 +531,19 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-5 offset-md-1">
+                                <div class="col-md-4">
                                     <a class="sponsor" href="https://www.bitonic.nl/" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/gold/bitonic.png" alt="Bitonic">
                                     </a>
                                 </div>
-                                <div class="col-md-5">
+                                <div class="col-md-4">
                                     <a class="sponsor" href="https://breaking-bitcoin.com/" target="_blank">
                                         <img class="img-fluid breaking-bitcoin" src="img/sponsors/gold/bb.png" alt="Breaking Bitcoin">
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a class="sponsor" href="" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/gold/cryptotrust.png" alt="Cryptotrust">
                                     </a>
                                 </div>
                             </div>
