added sponsor woleet

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                                     </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a class="sponsor" href="" target="_blank">
+                                    <a class="sponsor" href="https://twitter.com/CryptoFR" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/gold/cryptotrust.png" alt="Cryptotrust">
                                     </a>
                                 </div>
@@ -584,9 +584,9 @@
                                         <img class="img-fluid rounded-circle" src="img/sponsors/silver/bitBox.png" alt="BitBox">
                                     </a>
                                 </div>
-                                <div class="col-4 col-sm-4 col-md-2 ">
-                                    <a class="sponsor" href="docs/Bobsponsorship.pdf" type="application/pdf" target="_blank">
-                                        <img class="img-fluid rounded-circle" src="img/sponsors/besponsor.png" alt="Sponsorship Proposal">
+                                <div class="col-4 col-sm-4 col-md-2">
+                                    <a class="sponsor" href="https://www.woleet.io/en/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/silver/woleet.png" alt="Woleet">
                                     </a>
                                 </div>
                             </div>
