added sponsor condenst tech

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-4 col-md-2 offset-md-2">
+                                <div class="col-4 col-md-2 offset-md-1">
                                     <a class="sponsor" href="https://comproeuro.it/" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/coal/comproEuro.png" alt="Compro Euro">
                                     </a>
@@ -616,6 +616,11 @@
                                 <div class="col-4 col-md-2">
                                     <a class="sponsor" href="https://blockstream.com" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/coal/blockstream.png" alt="Blockstream">
+                                    </a>
+                               </div>
+                               <div class="col-4 col-md-2">
+                                    <a class="sponsor" href="https://condensat.tech/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/coal/condensatTechnologies.png" alt="Condensat Technologies">
                                     </a>
                                </div>
                             </div>
